--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hola Mundo yeeeeei!!!</h1>
+  <h1>Hola Mundo!!!</h1>
+  <h2>Hola Schoooool!!!</h2>
 </body>
 </html>
